#2517 Improved JavaDoc.