@@ -88,7 +88,7 @@ public abstract class EntityQueryCriteria<C extends ICentreDomainTreeManagerAndE
         this.dates = dates;
         this.queryProperties = lazySupplier(this::createQueryProperties);
 
-        //This values should be initialized through reflection.
+        // These values are intended to be initialised via reflection.
         this.dao = null;
         this.cdtme = null;
     }
@@ -97,26 +97,27 @@ public abstract class EntityQueryCriteria<C extends ICentreDomainTreeManagerAndE
         return dao;
     }
 
-    /// Returns the centre domain tree manager.
+    /// Returns the centre’s domain tree manager.
     ///
     public C getCentreDomainTreeMangerAndEnhancer() {
         return cdtme;
     }
 
-    /// Returns the root for which this criteria was generated.
+    /// Returns the root entity for which this criterion was generated.
     ///
     public Class<T> getEntityClass() {
         return dao.getEntityType();
     }
 
-    /// Returns the enhanced type for entity class. The entity class is retrieved with [#getEntityClass()] method.
+    /// Returns the enhanced type for the entity class.
+    /// The entity class is obtained using the [#getEntityClass()] method.
     ///
     @SuppressWarnings("unchecked")
     public Class<T> getManagedType() {
         return (Class<T>) getCentreDomainTreeMangerAndEnhancer().getEnhancer().getManagedType(getEntityClass());
     }
 
-    /// Must load default values for the properties of the binding entity.
+    /// Loads the default values for the properties of the binding entity.
     ///
     public void defaultValues() {
         final IAddToCriteriaTickRepresentation ftr = getCentreDomainTreeMangerAndEnhancer().getRepresentation().getFirstTick();
@@ -128,13 +129,15 @@ public abstract class EntityQueryCriteria<C extends ICentreDomainTreeManagerAndE
         }
     }
 
-    /// Enhances this criteria entity with custom fetch provider, that will extend the fetching strategy of running queries on top of chosen result-set properties.
+    /// Enhances this criteria entity with a custom fetch provider,
+    /// which extends the fetching strategy for queries based on the selected result-set properties.
     ///
     public void setAdditionalFetchProvider(final IFetchProvider<T> additionalFetchProvider) {
         this.additionalFetchProvider = Optional.of(additionalFetchProvider);
     }
 
-    /// Enhances this criteria entity with fetch provider consisting from properties that are used for tooltips of other properties; it will extend the fetching strategy of running queries on top of chosen result-set properties.
+    /// Enhances this criteria entity with a fetch provider consisting of properties, used as tooltips for other properties.
+    /// This fetch provider extends the fetching strategy for queries based on the selected result-set properties.
     ///
     public void setAdditionalFetchProviderForTooltipProperties(final IFetchProvider<T> additionalFetchProviderForTooltipProperties) {
         this.additionalFetchProviderForTooltipProperties = Optional.of(additionalFetchProviderForTooltipProperties);
@@ -144,14 +147,16 @@ public abstract class EntityQueryCriteria<C extends ICentreDomainTreeManagerAndE
         this.createdByUserConstraint = Optional.of(user);
     }
 
-    /// Enhances this criteria entity with custom query enhancer and its optional centre context, that will extend the query on top of chosen criteria conditions.
+    /// Enhances this criteria entity with a custom query enhancer and its optional centre context,
+    /// which extends the query based on the selected criteria conditions.
     ///
     public void setAdditionalQueryEnhancerAndContext(final IQueryEnhancer<T> additionalQueryEnhancer, final Optional<CentreContext<T, ?>> centreContextForQueryEnhancer) {
         this.additionalQueryEnhancer = Optional.of(additionalQueryEnhancer);
         this.centreContextForQueryEnhancer = centreContextForQueryEnhancer;
     }
 
-    /// Creates the query model based on 'queryProperties' of the 'managedType' and on custom query enhancer (if any).
+    /// Creates a query model based on the `queryProperties` of the `managedType`
+    /// and an optional custom query enhancer.
     ///
     private static <T extends AbstractEntity<?>> EntityResultQueryModel<T> createQuery(final Class<T> type, final Class<T> managedType, final List<QueryProperty> queryProperties, final Optional<IQueryEnhancer<T>> additionalQueryEnhancer, final Optional<CentreContext<T, ?>> centreContextForQueryEnhancer, final Optional<User> createdByUserConstraint, final IDates dates) {
         final EntityResultQueryModel<T> query = createCompletedQuery(type, managedType, queryProperties, additionalQueryEnhancer, centreContextForQueryEnhancer, createdByUserConstraint, dates).model();
@@ -159,13 +164,14 @@ public abstract class EntityQueryCriteria<C extends ICentreDomainTreeManagerAndE
         return query;
     }
 
-    /// Generates an EQL model to the stage of [ICompleted], which can be conveniently complemented with custom yield instructions.
+    /// Generates an EQL model up to the [ICompleted] stage,
+    /// which can then be conveniently extended with custom yield instructions.
     ///
     public ICompleted<T> createQuery() {
         return createCompletedQuery(getEntityClass(), getManagedType(), queryProperties.get(), additionalQueryEnhancer, centreContextForQueryEnhancer, createdByUserConstraint, dates);
     }
 
-    /// Returns the parameter map for query.
+    /// Returns the parameter map for the query.
     ///
     public Map<String, Object> getParameters () {
         final IAddToCriteriaTickManager criteriaTickManager = getCentreDomainTreeMangerAndEnhancer().getFirstTick();
@@ -175,8 +181,8 @@ public abstract class EntityQueryCriteria<C extends ICentreDomainTreeManagerAndE
         return resultMap;
     }
 
-    /// Populates parameters map with instances of [QueryProperty].
-    /// This method should be used to expand mnemonics value into conditions for the EQL `critCondition` operator.
+    /// Populates the parameter map with instances of [QueryProperty].
+    /// This method should be used to expand mnemonic into conditions for the EQL `critCondition` operator.
     ///
     private Map<String, QueryProperty> getQueryPropertyParameters() {
         return getCentreDomainTreeMangerAndEnhancer().getFirstTick().checkedProperties(getEntityClass()).stream()
@@ -186,17 +192,23 @@ public abstract class EntityQueryCriteria<C extends ICentreDomainTreeManagerAndE
                 .collect(toMap(qp -> queryPropertyParamName(qp.getPropertyName()), qp -> qp));
     }
 
-    /// Creates the fetch provider based on `properties` of the `managedType` and on custom fetch provider (if any).
+    /// Creates a fetch provider based on the `properties` of the `managedType`
+    /// and an optional custom fetch provider.
     ///
-    /// Please, note that custom fetch provider can have its top-level type marked as 'instrumented' (or its property fetch providers). If this is the case, then it will override
-    /// existing defaults (for top-level entity it will override .lightweight on query builder and for properties it will override their concrete fetch models).
+    /// Note that a custom fetch provider may have its top-level type (or its property fetch providers)
+    /// marked as *instrumented*.
+    /// In such cases, it will override the existing defaults —
+    /// for the top-level entity, it overrides `.lightweight` in the query builder,
+    /// and for properties, it overrides their specific fetch models.
     ///
     protected static <T extends AbstractEntity<?>, V extends AbstractEntity<?>> IFetchProvider<V> createFetchModelFrom(final Class<V> managedType, final Set<String> properties, final Optional<IFetchProvider<T>> additionalFetchProvider, final Optional<IFetchProvider<T>> additionalFetchProviderForTooltipProperties) {
         final IFetchProvider<V> rootProvider = properties.contains("") ? EntityUtils.fetchNotInstrumentedWithKeyAndDesc(managedType)
                 : EntityUtils.fetchNotInstrumented(managedType);
         final Set<String> authorisedProperties = properties.stream().filter(prop -> isPropertyAuthorised(managedType, prop)).collect(toCollection(LinkedHashSet::new));
-        // Analyse 'properties' and get all 'short collectional' properties if any. Then extend main fetch provider with key-fetched providers of short collection parents.
-        // This should be done in order to be able to correctly retrieve centre results with short collections (EQL retrieval sorts collection elements by keys and thus such enhancement is required).
+        // Analyse 'properties' and get all 'short collectional' properties if any.
+        // Then extend main fetch provider with key-fetched providers of short collection parents.
+        // This should be done in order to be able to correctly retrieve centre results with short collections
+        // (EQL retrieval sorts collection elements by keys and thus such enhancement is required).
         final IFetchProvider<V> rootProviderWithResultSetProperties = authorisedProperties.stream()
                 .filter(property -> isShortCollection(managedType, property))
                 .reduce(rootProvider.with(authorisedProperties), (fetchProvider, shortCollectionProp) -> {
@@ -214,7 +226,7 @@ public abstract class EntityQueryCriteria<C extends ICentreDomainTreeManagerAndE
             .orElse(resultWithoutTooltipProps);
     }
 
-    /// This is temporary solution needed for pagination support on web ui
+    /// Temporary solution required to support pagination in the Web UI.
     ///
     @Deprecated(forRemoval = true, since = "2.2.0")
     public IPage<T> getPage(final int pageNumber, final int pageCount, final int pageCapacity) {
@@ -227,7 +239,8 @@ public abstract class EntityQueryCriteria<C extends ICentreDomainTreeManagerAndE
         }
     }
 
-    /// Returns the data page with summary/ Before it retrieves the page it also calculates whether specified page number is in the range available pages.
+    /// Returns a data page including summary information.
+    /// Before retrieving the page, it checks whether the specified page number is within the range of available pages.
     ///
     public Pair<IPage<T>, T> getPageWithSummaries(final int pageNumber, final int pageCapacity) {
         final Pair<QueryExecutionModel<T, EntityResultQueryModel<T>>, QueryExecutionModel<T, EntityResultQueryModel<T>>> resultQuery = generateQueryWithSummaries();
@@ -241,12 +254,12 @@ public abstract class EntityQueryCriteria<C extends ICentreDomainTreeManagerAndE
         return new Pair<>(getPage(resultQuery.getKey(), pageNumber, pageCapacity), getSummary(resultQuery.getValue()));
     }
 
-    /// Calculates the summaries for specified query.
+    /// Calculates the summaries for the given `query`.
     ///
     private T getSummary(final QueryExecutionModel<T, EntityResultQueryModel<T>> query) {
         if (query != null) {
             final List<T> list = getAllEntities(query);
-            return list.size() == 1 ? list.get(0) : null;
+            return list.size() == 1 ? list.getFirst() : null;
         }
         return null;
     }
@@ -260,7 +273,7 @@ public abstract class EntityQueryCriteria<C extends ICentreDomainTreeManagerAndE
         }
     }
 
-    /// Generates the query and summary query for this entity query criteria.
+    /// Generates a query and a corresponding summary query for this entity query criteria.
     ///
     private Pair<QueryExecutionModel<T, EntityResultQueryModel<T>>, QueryExecutionModel<T, EntityResultQueryModel<T>>> generateQueryWithSummaries() {
         final Class<?> root = getEntityClass();
@@ -287,7 +300,7 @@ public abstract class EntityQueryCriteria<C extends ICentreDomainTreeManagerAndE
         return dao.count(query.getQueryModel(), query.getParamValues());
     }
 
-    /// This is a temporary solution, needed for pagination support in the Web UI.
+    /// Temporary solution required to support pagination in the Web UI.
     ///
     public IPage<T> getPage(final int pageNumber, final int pageCapacity) {
         final QueryExecutionModel<T, EntityResultQueryModel<T>> resultQuery = generateQuery();
@@ -306,7 +319,7 @@ public abstract class EntityQueryCriteria<C extends ICentreDomainTreeManagerAndE
         return buildParametersMap;
     }
 
-    /// Run the configured entity query.
+    /// Executes the configured entity query.
     ///
     public final IPage<T> run(final int pageSize) {
         final Pair<QueryExecutionModel<T, EntityResultQueryModel<T>>, QueryExecutionModel<T, EntityResultQueryModel<T>>> queries = generateQueryWithSummaries();
@@ -317,26 +330,27 @@ public abstract class EntityQueryCriteria<C extends ICentreDomainTreeManagerAndE
         }
     }
 
-    /// Runs the specified query and returns result.
+    /// Executes the specified query and returns its results.
     ///
     public final IPage<T> run(final QueryExecutionModel<T, EntityResultQueryModel<T>> queryModel, final int pageSize) {
         return firstPage(queryModel, pageSize);
     }
 
-    /// Runs the specified query model and returns the result list.
+    /// Executes the specified query model and returns the resulting list.
     ///
     public final List<T> run(final QueryExecutionModel<T, EntityResultQueryModel<T>> queryModel) {
         return getAllEntities(queryModel);
     }
 
-    /// Runs the specified query model with managed type and its byte representation. Returns the result page of specified size.
+    /// Executes the specified query model using `managedType` and its byte representation.
+    /// Returns a result page of the specified size.
     ///
     public final IPage<T> run(final QueryExecutionModel<T, EntityResultQueryModel<T>> queryModel, final Class<T> managedType, final byte[] managedTypeArray, final int pageSize) {
         generatedEntityController.setEntityType(managedType);
         return generatedEntityController.firstPage(queryModel, pageSize);
     }
 
-    /// Runs the specified query model with managed type and its byte representation.
+    /// Executes the specified query model using `managedType` and its byte representation.
     ///
     public final List<T> run(final ICentreDomainTreeManagerAndEnhancer cdtmeWithWhichAnalysesQueryHaveBeenCreated, final QueryExecutionModel<T, EntityResultQueryModel<T>> queryModel, final Class<T> managedType, final byte[] managedTypeArray) {
         generatedEntityController.setEntityType(managedType);
@@ -346,8 +360,9 @@ public abstract class EntityQueryCriteria<C extends ICentreDomainTreeManagerAndE
         return generatedEntityController.getAllEntities(queryModel);
     }
 
-    /// Returns the [LifecycleModel] instance that corresponds to the given query model, lifecycle property and the interval. If the associated controller isn't lifecycle then
-    /// it will return null.
+    /// Returns a [LifecycleModel] instance corresponding to `model`,
+    /// the lifecycle property `propertyName`, and the date interval `from`/`to`.
+    /// Returns `null` if the associated controller is not lifecycle-aware.
     ///
     @SuppressWarnings("unchecked")
     public final LifecycleModel<T> getLifecycleInformation(final EntityResultQueryModel<? extends AbstractEntity<?>> model, final List<String> distributionProperties, final String propertyName, final DateTime from, final DateTime to) {
@@ -358,13 +373,13 @@ public abstract class EntityQueryCriteria<C extends ICentreDomainTreeManagerAndE
         }
     }
 
-    /// Returns the value that indicates whether companion object associated with `this` criteria is lifecycle or not.
+    /// Returns whether the companion object associated with `this` criteria is lifecycle-aware.
     ///
     public boolean isLifecycleController() {
         return dao instanceof ILifecycleDao;
     }
 
-    /// Exports data in to the specified external file.
+    /// Exports data to the specified external file.
     ///
     @Deprecated(forRemoval = true, since = "2.2.0")
     public void export(final String fileName, final String[] propertyNames, final String[] propertyTitles) throws IOException {
@@ -382,11 +397,11 @@ public abstract class EntityQueryCriteria<C extends ICentreDomainTreeManagerAndE
     }
 
     private QueryExecutionModel.Builder<T, EntityResultQueryModel<T>> adjustLightweightness(final EntityResultQueryModel<T> notOrderedQuery, final boolean shouldBeInstrumented) {
-        // all import row centre should be heavyweight to populate errors trough ACE handlers
+        // All import row centres should be heavyweight to populate errors through ACE handlers.
         return shouldBeInstrumented ? from(notOrderedQuery) : from(notOrderedQuery).lightweight();
     }
 
-    /// Exports the data, which is retrieved with `qem`, to a file with `filename`.
+    /// Exports the data retrieved using `qem` to a file named `filename`.
     ///
     public void export(final String fileName, final QueryExecutionModel<T, ?> qem, final String[] propertyNames, final String[] propertyTitles) throws IOException {
         final byte[] content;
@@ -416,9 +431,9 @@ public abstract class EntityQueryCriteria<C extends ICentreDomainTreeManagerAndE
                 .with(getParameters()).model();
     }
 
-    /// Creates [IFetchProvider] for result-set of the entity centre.
-    /// The result includes all properties in result-set columns and properties from additional fetch provider, if there is one.
-    /// Also, it includes properties that are used as tooltips for other properties, if there are any.
+    /// Creates an [IFetchProvider] for the entity centre’s result-set.
+    /// The result includes all properties from the result-set columns, as well as those from an additional fetch provider, if specified.
+    /// It also includes any properties used as tooltips for other properties.
     ///
     public IFetchProvider<T> createResultSetFetchProvider() {
         return createFetchModelFrom(
@@ -447,7 +462,7 @@ public abstract class EntityQueryCriteria<C extends ICentreDomainTreeManagerAndE
         return new Pair<>(propertyNames.toArray(new String[] {}), propertyTitles.toArray(new String[] {}));
     }
 
-    /// Returns an entity instance by its `id`, or `null` is none found.
+    /// Returns an entity instance by its `id` or `null` if none found.
     ///
     public T getEntityById(final Long id) {
         final Class<?> root = getEntityClass();
@@ -463,17 +478,18 @@ public abstract class EntityQueryCriteria<C extends ICentreDomainTreeManagerAndE
         }
     }
 
-    /// Removes the passed entity. If the entity is not of the entity type or managed type of `this` criteria.
+    /// Removes the given `entity`.
+    /// Throws an exception if the `entity` is not of the entity type or managed type associated with `this` criteria.
     ///
     public void delete(final T entity) {
         if (entity.getType().equals(getEntityClass())) {
             dao.delete(entity);
         } else {
-            throw new IllegalArgumentException("Unexpeted entity type " + entity.getType() + " preventing deletion.");
+            throw new IllegalArgumentException("Unexpected entity type " + entity.getType() + " preventing deletion.");
         }
     }
 
-    /// Returns refetched with fetchModel entity for specified one.
+    /// Returns the `entity` refetched using the specified `fetchModel`.
     ///
     public T refetchEntity(final T entity, final fetch<T> fetchModel) {
         if (entity.getType().equals(getEntityClass())) {
@@ -486,7 +502,8 @@ public abstract class EntityQueryCriteria<C extends ICentreDomainTreeManagerAndE
                 + DynamicEntityClassLoader.getOriginalType(entity.getType()).equals(getEntityClass()));
     }
 
-    /// Converts existing properties model (which has separate properties for from/to, is/isNot, and so on) into a new properties model, with a single abstraction for every criterion.
+    /// Converts existing properties model (which has separate properties for `from`/`to`, `is`/`isNot`, and so on) into a new properties model,
+    /// with a separate abstraction for every criterion.
     ///
     public final List<QueryProperty> createQueryProperties() {
         final List<QueryProperty> queryProperties = new ArrayList<>();
@@ -498,10 +515,10 @@ public abstract class EntityQueryCriteria<C extends ICentreDomainTreeManagerAndE
         return queryProperties;
     }
 
-    /// Returns the first result page for a query model. The page size is specified with the second parameter.
+    /// Returns the first result page for the given query model.
     ///
-    /// @param queryModel query model for which the first result page must be returned.
-    /// @param pageSize the page size.
+    /// @param queryModel the query model for which the first result page should be returned
+    /// @param pageSize   the size of the page
     ///
     public final IPage<T> firstPage(final QueryExecutionModel<T, EntityResultQueryModel<T>> queryModel, final int pageSize) {
         if (getManagedType().equals(getEntityClass())) {
@@ -527,9 +544,9 @@ public abstract class EntityQueryCriteria<C extends ICentreDomainTreeManagerAndE
         return pair(entities, entities.isEmpty() ? null : getSummary(queries.getValue()));
     }
 
-    /// Returns all entities that get retrieved with `queryModel`.
+    /// Returns all entities retrieved by the given `queryModel`.
     ///
-    /// @param queryModel query model for which the first result page must be returned.
+    /// @param queryModel the query model used to fetch the entities
     ///
     public final List<T> getAllEntities(final QueryExecutionModel<T, EntityResultQueryModel<T>> queryModel) {
         if (getManagedType().equals(getEntityClass())) {
@@ -540,15 +557,17 @@ public abstract class EntityQueryCriteria<C extends ICentreDomainTreeManagerAndE
         }
     }
 
-    /// Returns a stream of entities that match a generated query.
-    /// The returned stream must always be wrapped into `try with resources` clause to ensure that the underlying resultset is closed.
+    /// Returns a stream of entities matching the generated query.
+    /// The returned stream must always be used within a `try-with-resources` block
+    /// to ensure that the underlying result set is properly closed.
     ///
     public final Stream<T> streamEntities(final int fetchSize, final Long... ids) {
         return streamEntities(generateQuery(), fetchSize, ids);
     }
 
-    /// Returns a stream of entities that match the provided query.
-    /// The returned stream must always be wrapped into `try with resources` clause to ensure that the underlying resultset is closed.
+    /// Returns a stream of entities matching the provided query.
+    /// The returned stream must always be used within a `try-with-resources` block
+    /// to ensure that the underlying result set is properly closed.
     ///
     public final Stream<T> streamEntities(final QueryExecutionModel<T, EntityResultQueryModel<T>> queryModel, final int fetchSize, final Long... ids) {
 
@@ -570,9 +589,9 @@ public abstract class EntityQueryCriteria<C extends ICentreDomainTreeManagerAndE
         }
     }
 
-    /// Returns first `numberOfEntities` that match `queryModel`.
+    /// Returns the first `numberOfEntities` entities that match the given `queryModel`.
     ///
-    /// @param queryModel query model for which the first result page is returned.
+    /// @param queryModel the query model used to fetch the entities
     ///
     public final List<T> getFirstEntities(final QueryExecutionModel<T, EntityResultQueryModel<T>> queryModel, final int numberOfEntities) {
         if (getManagedType().equals(getEntityClass())) {
@@ -583,10 +602,10 @@ public abstract class EntityQueryCriteria<C extends ICentreDomainTreeManagerAndE
         }
     }
 
-    /// Returns the first result page for query model with summary. The page size is specified with argument `pageSize`.
+    /// Returns the first result page for the given query model, including summary information.
     ///
-    /// @param queryModel query model for which the first result page must be returned.
-    /// @param pageSize the page size.
+    /// @param queryModel the query model for which the first result page should be returned
+    /// @param pageSize   the size of the page
     ///
     public final IPage<T> firstPage(final QueryExecutionModel<T, EntityResultQueryModel<T>> queryModel, final QueryExecutionModel<T, EntityResultQueryModel<T>> totalsModel, final int pageSize) {
         if (getManagedType().equals(getEntityClass())) {
@@ -597,7 +616,8 @@ public abstract class EntityQueryCriteria<C extends ICentreDomainTreeManagerAndE
         }
     }
 
-    /// Converts an existing property model (which has separate properties for from/to, is/isNot, and so on) into a new property model, with a single abstraction for a criterion.
+    /// Converts an existing property model (which has separate properties for `from`/`to`, `is`/`isNot`, and so on)
+    /// into a new property model with a separate abstraction for each criterion.
     ///
     private QueryProperty createQueryProperty(final String actualProperty) {
         final IAddToCriteriaTickManager tickManager = getCentreDomainTreeMangerAndEnhancer().getFirstTick();
@@ -633,32 +653,35 @@ public abstract class EntityQueryCriteria<C extends ICentreDomainTreeManagerAndE
     }
 
     /// Returns the default `controllerProvider`.
+    ///
     public ICompanionObjectFinder getControllerProvider() {
         return controllerProvider;
     }
 
-    /// Initialises crit-only single prototype entity if it was not initialised before. Returns it as a result.
+    /// Initialises a crit-only single prototype entity if it has not been initialised before,
+    /// and returns it as a result.
     ///
-    /// @param entityType the type of the prototype (only for initialisation)
-    /// @param id id for the prototype (only for initialisation)
+    /// @param entityType the type of the prototype (used only for initialisation)
+    /// @param id         the ID of the prototype (used only for initialisation)
     ///
     public AbstractEntity<?> critOnlySinglePrototypeInit(final Class<AbstractEntity<?>> entityType, final Long id) {
         if (critOnlySinglePrototype == null) {
             critOnlySinglePrototype = getEntityFactory().newEntity(entityType, id);
             critOnlySinglePrototype.resetMetaState();
-            // Initialisation phase is started here, so that definers will be actioned with isInitialising = true mark. Validation will be deferred to the moment when initialisation phase ends.
+            // The initialisation phase starts here, so that definers are executed with the `isInitialising = true` flag.
+            // Validation is deferred until the initialisation phase ends.
             critOnlySinglePrototype.beginInitialising();
         }
         return critOnlySinglePrototype();
     }
 
-    /// Returns crit-only single prototype entity.
+    /// Returns the crit-only single prototype entity.
     ///
     public AbstractEntity<?> critOnlySinglePrototype() {
         return critOnlySinglePrototype;
     }
 
-    /// Returns crit-only single prototype entity if exists.
+    /// Returns the crit-only single prototype entity, if it exists.
     ///
     public Optional<AbstractEntity<?>> critOnlySinglePrototypeOptional() {
         return ofNullable(critOnlySinglePrototype());
